added search status, page links

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -42,6 +42,10 @@
 
     {{{body}}}
 
+    <footer>
+        <p>&copy; 2015 Motion Picture - <a href="#">source code</a></p>
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="bundle.js"></script>
